--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
